adding author and review models, routes, controller and validation rules
